# kafka-cluster

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.backup  Dockerfile.multi-cluster  README.md  REPOSITORY_SUMMARY.md  SETUP.md  config_demo.py  docker-compose.multi-cluster.yml  docker-compose.yml  install.sh  install_multi_cluster.sh  installation_history.json  pyproject.toml  quick-start.sh  requirements.txt  run_tests.py  setup_wizard.py  simple_server.py  start.sh  stop.sh  test-stack.sh  validate-setup.sh  validate_ui_rest_proxy_integration.py
cluster_registry/clusters/: dev-cluster.json  index.json
cluster_registry/templates/: development.json  high-throughput.json  index.json  production.json  testing.json
config/: development.yml  multi_cluster_config.yml  production.yml  testing.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  MULTI_CLUSTER_GUIDE.md
examples/: README.md  api_examples.py  complete_examples.py
k8s/: configmap.yaml  multi-cluster-manager.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
logs/: logrotate.conf
monitoring/: prometheus.yml
monitoring/rules/: multi-cluster-alerts.yml
scripts/: deploy-production.sh  validate-production-readiness.sh
src/: __init__.py  exceptions.py  main.py
src/api/: advanced_cluster_routes.py  auth_routes.py  configuration_routes.py  multi_cluster_routes.py  routes.py  web_interface_routes.py
src/config/: __init__.py  settings.py  utils.py
src/exceptions/: __init__.py  multi_cluster_exceptions.py
src/middleware/: backward_compatibility.py  logging_middleware.py
src/models/: __init__.py  base.py  catalog.py  cluster.py  (+3 more)
tests/: conftest.py  run_e2e_tests.py  test_advanced_cluster_features.py  test_api_routes.py  test_backward_compatibility.py  test_cluster_factory.py  test_cluster_manager.py  test_cluster_registry.py  test_comprehensive_suite.py  test_config_settings.py  test_configuration_manager.py  test_cross_cluster_operations.py  test_data_consistency.py  test_docker_compose_generator.py  test_end_to_end_integration.py  test_enhanced_health_monitor.py  test_error_handlers.py  test_error_recovery.py  test_exceptions.py  test_fixtures.py  test_health_monitor.py  test_integration.py  test_logging.py  test_main.py  test_message_manager.py  test_models_base.py  test_models_catalog.py  test_models_cluster.py  test_models_message.py  test_models_multi_cluster.py  test_models_topic.py  test_multi_cluster_api.py  test_multi_cluster_e2e.py  test_multi_cluster_exceptions.py  test_multi_cluster_installer.py  test_multi_cluster_manager.py  test_multi_cluster_monitor.py  test_multi_cluster_performance.py  test_multi_cluster_services.py  test_multi_cluster_workflows.py  (+13 more)
(+48 files in other folders)
